test/regtest/goldens/errors/check_assign_ref.ir
function <main> () { ; void
  block {
    label: label(0)
    lea tmp(0,ptr to i1) = local(0,i1) 
    arg imm(1,ptr to i8) 
    arg tmp(0,ptr to i1) 
    call tmp(1,i64) = лит_в_цел 
    stre local(1,i64) tmp(1,i64) 
    load tmp(2,i1) = local(0,i1) 
    arg tmp(2,i1) 
    call output_bool 
    arg imm(2,ptr to i8) 
    call output_string 
    jmp label(1) 
  }
  block {
    label: label(1)
    ret 
  }
}
